<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/instructions1"
    android:background="@drawable/backgroundgr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_or_tap_outside_the_instructions_page_to_close_instruction"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_an_mp3_link_in_the_field_asking_for_a_url"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_your_link_is_set_click_find_song"
            android:layout_marginBottom="45dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mp3_player_controls"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_leftmost_square_stop_button_stops_and_moves_song_progress_to_the_start"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_pause_button"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_middle_button_can_start_or_resume_the_song_if_paused_or_has_not_started_yet_if_the_song_is_playing_the_button_pauses_the_song"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_button"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_rightmost_repeat_button_replays_the_song_when_the_end_is_reached_this_continues_until_the_repeat_button_is_clicked_once_more_the_repeat_symbol_to_the_top_left_is_an_indicator_repeat_is_active"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="20sp"/>


    </LinearLayout>
</ScrollView>