<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_repeat_on"
        android:gravity="start"
        android:visibility="invisible"
        android:contentDescription="@string/repeat_on" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Mp3 Music Player"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textURL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:autofillHints="Insert mp3 URL here"
        android:hint="Insert mp3 URL here"
        android:inputType="textUri"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/urlButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:paddingTop="0dp"
        android:text="Find Song"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_light" />

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Currently Playing"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="No Song"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/stop"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="start"
            android:padding="10dp"
            android:background="@drawable/ic_stop" />

        <Button
        android:id="@+id/start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:padding="10dp"
        android:background="@drawable/ic_play" />

        <Button
            android:id="@+id/replay"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="end"
            android:padding="10dp"
            android:background="@drawable/ic_repeat_off"
            android:gravity="end" />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/something_unclear"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            android:text="@string/instructions_here"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>